--- a/css/style.css
+++ b/css/style.css
@@ -92,7 +92,7 @@
 }
 .habilidades > ul{
     margin-left: 20px;
-    list-style:
+   
 }
 
 .referencias{
@@ -151,6 +151,9 @@
 .experiencias cite{
    margin-bottom:10px;
 }
+.experiencias:last-child{
+    margin-bottom: 20px;
+}
 
 .educacion{
     width: 100%;
@@ -160,8 +163,9 @@
     padding: 5px;
     font-size: 20px;
 }
-.estu margin-top: 10px;
-    padding: 5px;dios{
+.estudios{ 
+    margin-top: 10px;
+    padding: 5px;
     width: 100%;
 }
 .estudios h3{
